# j-rss-tui

./: .gitignore  Cargo.toml
src/: app.rs  main.rs
src/app/: app.rs
src/feeds_and_entry/: entry.rs  feeds.rs  feeds_and_entry.rs  mod.rs
src/session_and_user/: mod.rs  session.rs  session_and_user.rs  user.rs
src/ui/: mod.rs  primitives.rs  screens.rs
