[package]
name = "j-rss-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.6", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.42"
serde_derive = "1.0"
serde-xml-rs = "0.5"
feed-rs = "1.3"
html2md = "0.2.14"
chrono = "0.4"
tui = "0.19"
crossterm = "0.25"
open = "4.1.0"
